[FR 2961057]: step done for DisposableIntIterator and extending classes. Thread-safe (sadly using synchronized) but strongly reusable. + clean up code
git-svn-id: svn://svn.code.sf.net/p/choco/code/trunk@1548 5779b9a9-2447-0410-887e-bb98d57c6de4